# Proyecto-PDI

./: Calculo_matriz_transformacion.py  Instalacion_ORB_SLAM3.md  InstallationManual.md  README.md  UI.tar.xz  UserManual.md  ZED_2i.yaml  run.txt
Prueba_ORB-SLAM3_CamaraZED/: CMakeCache.txt  CMakeLists.txt  ZED_2i.yaml  stereo_inertial_zed  stereo_inertial_zed.cc  stereo_zed.cc  zed_orbslam3.cpp
